# lab3Game

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
game_lib/: BaseItems.cpp  gameLib.cpp  gameLib.hpp
lib/: matrix_lib.h
source/enemy/: CMakeLists.txt  enemy.cpp  enemy.h
source/gameServices/: CMakeLists.txt  gameServices.cpp  gameServices.h
source/inventory/: CMakeLists.txt  Inventory.cpp  Inventory.h
source/items/: CMakeLists.txt  baseItems.cpp  items.cpp  items.h
source/lib/: matrix_lib.h
